# retooter

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint-test-upon-push.yml  retooter.yml
src/retooter/: __init__.py  __main__.py  errors.py  retooter.py
